<resources>
    <string name="app_name">Mobilesafe1</string>
    <string name="sample_device_admin">超级管理员</string>
    <string name="sample_device_admin_description">一键锁屏，一键开启，一键清除数据，一键卸载</string>
    <string name="dialog_addblacknumber_title">添加黑名单</string>
    <string name="dialog_blacknumber_et_hint">请输入黑名单联系人</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="blacknumber_list">黑名单列表</string>
    <string name="blacknumber_add">添加号码</string>
    <string name="blacknumber_phone">拦截号码</string>
    <string name="blacknumber_mode">拦截类型</string>
    <string name="intercept_sms">拦截短信</string>
    <string name="intercept_phone">拦截手机</string>
    <string name="intercept_all">拦截所有</string>
    <string name="query_address">查询联系人归属地</string>
    <string name="sms_backup">备份短信</string>
    <string name="app_manager">软件管理</string>
    <string name="phone_memory">内存可用空间:</string>
    <string name="sd_memory">sd卡可用空间:</string>
    <string name="tv_uninstall">卸载</string>
    <string name="tv_start">启动</string>
    <string name="tv_share">分享</string>
    <string name="process_manage">进程管理</string>
    <string name="select_all">全选</string>
    <string name="invert_select">反选</string>
    <string name="fly_memory_clear">一键清理</string>
    <string name="process_setting">设置</string>
    <string name="common_number_query">常用号码查询</string>
    <string name="app_lock">程序锁</string>
    <string name="unlock">未加锁</string>
    <string name="lock">已加锁</string>
    <string name="phone_antivirus">手机杀毒</string>
    <string name="cache_clean">缓存清理</string>
    <string name="cache_clean_all">清理全部</string>
</resources>
