<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<TextView
    android:gravity="center"
    android:text="@string/dialog_addblacknumber_title"
   android:layout_height="?attr/actionBarSize"
    android:textSize="20sp"
    android:layout_width="match_parent"
    android:background="#ccc"
     />
    <EditText
        android:id="@+id/et_blacknumber_phone"
        android:hint="@string/dialog_blacknumber_et_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <RadioGroup
        android:id="@+id/rd_mode_grop"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/rb_sms"
            android:text="@string/intercept_sms"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/rb_phone"
            android:text="@string/intercept_phone"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/rb_all"
            android:text="@string/intercept_all"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </RadioGroup>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/bt_blacknumber_confirm"
            android:background="@drawable/bt_sim_number"
            android:text="@string/confirm"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/bt_blacknumber_cancel"
            android:background="@drawable/bt_sim_number"
            android:text="@string/cancel"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

    </LinearLayout>
</LinearLayout>