<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/local_popup_bg"
    >
<TextView
    android:id="@+id/tv_uninstall"
    android:gravity="center"
    android:drawableTop="@drawable/img1"
    android:text="@string/tv_uninstall"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" />
    <TextView
        android:gravity="center"
        android:id="@+id/tv_start"
        android:drawableTop="@drawable/img2"
        android:text="@string/tv_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/tv_share"
        android:text="@string/tv_share"
        android:drawableTop="@drawable/img3"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>