<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#95f55e"
        android:gravity="center"
        app:popupTheme="@style/AlertDialog.AppCompat.Light">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:text="@string/process_manage" />
    </android.support.v7.widget.Toolbar>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <TextView
        android:id="@+id/tv_process_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="进程总数"
        />
    <TextView
        android:id="@+id/tv_memory_space"
        android:layout_alignParentRight="true"
        android:text="内存使用情况"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    </RelativeLayout>
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    >

    <ListView
        android:id="@+id/lv_process"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        >
    </ListView>
    <TextView
        android:textColor="#000"
        android:textSize="18sp"
        android:background="#ccc"
        android:id="@+id/tv_process_des"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

      />
</FrameLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/bt_select_all"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/select_all"
            />
        <Button
            android:id="@+id/bt_invert_select"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/invert_select"
            />
        <Button
            android:id="@+id/bt_fly_memory_clear"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/fly_memory_clear"
            />
        <Button
            android:id="@+id/bt_process_setting"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/process_setting"
            />
    </LinearLayout>

</LinearLayout>