<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#95f55e"
        android:gravity="center"
        app:popupTheme="@style/AlertDialog.AppCompat.Light">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_manager" />
    </android.support.v7.widget.Toolbar>

<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <TextView
        android:text="@string/phone_memory"
        android:id="@+id/tv_phone_memory"
        android:layout_alignParentLeft="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_alignParentRight="true"
        android:text="@string/sd_memory"
        android:id="@+id/tv_sd_memory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</RelativeLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/tv_des"
            android:textSize="18sp"
            android:background="#ccc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <ListView
            android:id="@+id/lv_appmanager"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </ListView>
    </FrameLayout>


</LinearLayout>