<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#95f55e"
        android:gravity="center"
        app:popupTheme="@style/AlertDialog.AppCompat.Light">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:text="@string/app_lock" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/bt_unlock"
            android:text="@string/unlock"
            android:background="@drawable/tab_left_pressed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/bt_lock"
            android:text="@string/lock"
            android:background="@drawable/tab_right_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
<LinearLayout
    android:id="@+id/ll_unlock"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_unlock"
        android:text="未上锁"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <ListView
        android:id="@+id/lv_unlock"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </ListView>
</LinearLayout>
    <LinearLayout
        android:id="@+id/ll_lock"
        android:visibility="invisible"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <TextView
            android:id="@+id/tv_lock"
            android:text="已上锁"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <ListView
            android:id="@+id/lv_lock"
            android:layout_width="match_parent"
            android:layout_height="match_parent"></ListView>
    </LinearLayout>

</LinearLayout>